# betterschool-sdk

./: Cargo.toml  README.md
src/: lib.rs  main.rs  structure.rs  tests.rs
tests/: integration_test.rs
