[package]
name = "betterschool-sdk"
version = "1.0.0"
edition = "2021"
license = "CC-BY-SA-4.0"
description = "The official BetterSchool rust sdk"
repository = "https://github.com/CheesyPhoenix/betterschool-sdk"
homepage = "https://chph.tk"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1", features = ["full"] }
